--- a/style.css
+++ b/style.css
@@ -15,11 +15,12 @@
 
 #mainNav .navbar-nav>li.nav-item>a.nav-link.active {
     color: #fff;
-    background: #1abc9c;
+    backdrop-filter: blur(14px);
+    background-color: #02c4ffb6;
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-    color: #1abc9c;
+    color: #02c4ffb6;
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link.active:hover {
@@ -59,7 +60,8 @@ nav div div h3 span a {
     color: black;
     padding: 7px;
     border-radius: 7px;
-    background-color: aliceblue;
+    background-color: rgba(255, 255, 255, 0.925);
+    backdrop-filter: blur(14px);backdrop-filter: blur(14px);
     transition: padding-left .2s;
 }
 h3 a:hover{
@@ -88,21 +90,16 @@ h3 a:hover{
     text-align: center;
     margin-bottom: 20px;
     color: white;
-
-
 }
 
 .card:hover {
     transform: scale(1.02);
     cursor: pointer;
     text-align: right;
-    transition: text-align .8s;
-
-    .card-content h2 {
+    .card-content h2{
         width: 75px;
     }
 }
-
 .card img {
     width: 100%;
     height: auto;
