some UI elements added

--- a/style.css
+++ b/style.css
@@ -37,15 +37,15 @@
 }
 
 body {
-    font-family:"Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     display: flex;
     flex-direction: column;
     align-items: center;
-   
     padding: 20px;
     background-image: url("https://images.wallpaperscraft.com/image/single/pawn_chess_transparent_1170976_1920x1200.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
+    
 }
 
 nav div div h3 {
@@ -61,10 +61,12 @@ nav div div h3 span a {
     padding: 7px;
     border-radius: 7px;
     background-color: rgba(255, 255, 255, 0.925);
-    backdrop-filter: blur(14px);backdrop-filter: blur(14px);
+    backdrop-filter: blur(14px);
+    backdrop-filter: blur(14px);
     transition: padding-left .2s;
 }
-h3 a:hover{
+
+h3 a:hover {
     color: black;
     font-weight: 700;
     padding-left: 25px;
@@ -90,16 +92,33 @@ h3 a:hover{
     text-align: center;
     margin-bottom: 20px;
     color: white;
+    animation: scrollreveal linear;
+    animation-timeline: view();
+    animation-range: 0 40%;
+}
+
+@keyframes scrollreveal {
+    from {
+        opacity: 0;
+        scale: 0.5;
+    }
+
+    to {
+        opacity: 1;
+        scale: 1;
+    }
 }
 
 .card:hover {
     transform: scale(1.02);
     cursor: pointer;
     text-align: right;
-    .card-content h2{
+
+    .card-content h2 {
         width: 75px;
     }
 }
+
 .card img {
     width: 100%;
     height: auto;
@@ -135,10 +154,12 @@ h3 a:hover{
     margin: 5px 0;
 
 }
-.card-start{
+
+.card-start {
     padding-bottom: 180px;
 }
-.topHead{
+
+.topHead {
     color: #fff;
     font-weight: 700;
     font-size: 43px;
