--- a/style.css
+++ b/style.css
@@ -31,10 +31,15 @@
     color: #fff;
 }
 
-.navbar-expand-lg .navbar-collapse {
-    display: flex !important;
+/* .navbar-expand-lg {
+    display: flex ;
     flex-basis: auto;
+} */
+ 
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
+
 
 body {
     font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -100,7 +105,7 @@ h3 a:hover {
 @keyframes scrollreveal {
     from {
         opacity: 0;
-        scale: 0.5;
+        scale: 0.8;
     }
 
     to {
